# swd_programmer_hack

./: Cargo.toml  README.md  memory.x  openocd.cfg
src/: main.rs
