[package]
name = "swd_programmer_hack"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.4"
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5"
nb = "0.1"
[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.stm32f0xx-hal]
version = "0.12"
features = ["stm32f030x4"]


[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
